syntax = "proto3";

package core;

option go_package = "tubes.sister/raft/gRPC";

service Hello {
  rpc SayHello(HelloMsg) returns (HelloRes) {}
}

message HelloMsg {
  string name = 1;
}

message HelloRes {
  string message = 1;
}